# TextFocus

./: .gitignore  BACKEND_README.md  CLAUDE.md  LICENSE  README.md  backend_service.py  build_backend.py  demo_backend.py  examples.md  install.bat  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  quick_cuts.py  quick_cuts_backend.py  requirements-backend.txt  requirements.txt  run-app.bat  test_backend.py  test_backend_simple.py  tsconfig.json  web_scraper.py
quick_cuts/: __init__.py  agent.py  aligner.py  cli.py  interactive.py  scraper.py  video.py
