[project]
name = "quick-cuts"
version = "1.0.0"
description = "Automatically align and center words in images using OCR for video editing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["ocr", "image-processing", "video-editing", "opencv", "tesseract"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
]

[project.scripts]
quick-cuts = "quick_cuts:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"