[project]
name = "quick-cuts"
version = "1.0.0"
description = "Automatically align and center words in images using OCR"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ocr", "image-processing", "video-editing", "tesseract"]

dependencies = [
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "icrawler>=0.6.0",
    "imageio>=2.31.0",
    "av>=10.0.0",
]

[project.scripts]
quick-cuts = "quick_cuts.cli:main"
qc = "quick_cuts.interactive:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["quick_cuts*"]
